 * src/filetypes.c, src/filetypes.h:
   Sort filetype groups alphabetically.
 * src/keyfile.c, src/filetypes.c, data/filetype_extensions.conf:
   Add comment about generating filetype_extensions.conf.
   Update filetype_extensions.conf.
 * src/filetypes.c:
   Rewrite filetypes_get_from_uid() for easier maintenance.
 * HACKING:
   Add more information for adding a filetype.
   2 minor edits.


2007-08-13  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/about.c: Increase border space in credits tab and align developer
                names left.
 * src/keyfile.c: Fix wrong debug message if a session file couldn't be
                  loaded.


2007-08-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetypes.freebasic: Add many keywordsGeanyObjectPrivate
                             (patch by Arthur Skowronek, thanks).
 * geanyobject.c: Fix a runtime warning.
 * doc/Makefile.am, doc/geany.txt, doc/geany.html:
   Don't use output redirection since the reST tools accept output
   filenames.
   Apply patch from John Gabriele to add some tweaks/fixes (thanks).


2007-08-10  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c, src/editor.c, src/editor.h:
   Make 'Delete current line' and 'Select current line' work for all
   lines that have a selection.
   Implement 'Copy current line'.
 * doc/geany.txt, doc/geany.html:
   Update selected line(s) keybindings.
 * src/plugindata.h:
   Tidy up struct typedefs.
 * src/geanyobject.c, src/plugindata.h, src/geanyobject.h,
   src/document.c, src/plugins.c, src/main.c, src/Makefile.am:
   Add plugin symbol geany_callbacks (see plugindata.h for details).
   Add GeanyObject type with "document-new", "document-open",
   "document-save" signals.


2007-08-10  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * tagmanager/php.c: Fix parsing classes with modifiers like 'final'.


2007-08-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
