@@ -14,6 +14,10 @@
  * HACKING:
    Add more information for adding a filetype.
    2 minor edits.
+ * src/plugindata.h, src/plugins.c:
+   Apply patch from blackdog to add document_save_file() to the plugin
+   API (thanks).
+   Add document_open_file() to plugin API.
 
 
 2007-08-13  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
